@@ -187,16 +187,61 @@
 
 
     <h1>Disable-FirewallStatefulFtp</h1>
-    <div><p>Disable-FirewallStatefulFtp [-Verbose] [-Debug] [-ErrorAction <ActionPreference>] [-WarningAction <ActionPreference>] [-ErrorVariable <String>] [-WarningVariable <String>] [-OutVariable <String>] [-OutBuffer <Int32>] [-WhatIf] [-Confirm]</p>
+    <div><p>Disables the <code>StatefulFtp</code> Windows firewall setting.</p>
 </div>
 
+        <h2>Syntax</h2>
+    <pre class="Syntax"><code>Disable-FirewallStatefulFtp [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
-    
-    
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Uses the <code>netsh</code> command to disable the <code>StatefulFtp</code> Windows firewall setting.</p>
 
+<p>If the firewall isn't configurable, writes an error and returns without making any changes.</p>
+
+    </div>
     
+            <h2>Related Commands</h2>
+        <ul>
+<li><a href="Assert-FirewallConfigurable.html">Assert-FirewallConfigurable</a></li>
+</ul>
+
+
+    		<h2> Parameters </h2>
+		<table border='1'>
+			<tr>
+				<th>Name</th>
+                <th>Type</th>
+				<th>Description</th>
+				<th>Required?</th>
+				<th>Pipeline Input</th>
+				<th>Default Value</th>
+			</tr>
+            			<tr valign='top'>
+				<td>WhatIf</td>
+				<td><a href="http://msdn.microsoft.com/en-us/library/system.management.automation.switchparameter.aspx">SwitchParameter</a></td>
+				<td></td>
+				<td>false</td>
+				<td>false</td>
+                <td></td>
+			</tr>
+			<tr valign='top'>
+				<td>Confirm</td>
+				<td><a href="http://msdn.microsoft.com/en-us/library/system.management.automation.switchparameter.aspx">SwitchParameter</a></td>
+				<td></td>
+				<td>false</td>
+				<td>false</td>
+                <td></td>
+			</tr>
+                            <tr valign="top">
+                <td><a href="http://technet.microsoft.com/en-us/library/dd315352.aspx">CommonParameters</a></td>
+                <td></td>
+                <td>This cmdlet supports common parameters.  For more information type <br> <code>Get-Help about_CommonParameters</code>.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+        </table>
         
     
         
@@ -204,6 +249,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Disable-FirewallStatefulFtp</code></pre>
+            <p><p>Disables the <code>StatefulFtp</code> Windows firewall setting.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
